# pipeline-user-orders

./: .gitignore  Readme.md  docker-compose.yml  extract.py  initdb.sql  olap-initdwh-config.sql  olap-initdwh-tables.sql  olap-initdwh.sql  oltp-initdb.sql  pipeline.conf.example  pyproject.toml  requirements.txt
experiments/: json-schemas-validate.py  orders_1.json-schema  users_1.json-schema
experiments/dim_orderstatus/: bronze_to_silver.sql
experiments/dim_user/: bronze_to_silver.sql
experiments/schema_manager/: schema_add.py
extract/: extract.py
extract-load/: extract_incremental.py  extract_kimball.py  extract_obt.py  extract_together.py  mysql_to_s3.py
extract/orders.parquet/: .part-00000-1df30ad3-d331-4b8a-b723-73d7905be606-c000.snappy.parquet.crc  part-00000-1df30ad3-d331-4b8a-b723-73d7905be606-c000.snappy.parquet
extract/users.parquet/: .part-00000-7dccf5da-d4d2-47dc-8630-d5f66c83fe05-c000.snappy.parquet.crc  part-00000-7dccf5da-d4d2-47dc-8630-d5f66c83fe05-c000.snappy.parquet
load/: load.py
samples/: orders.parquet  users.parquet
schema_manager/: schema_add.py
schema_manager/schemas/: user_1.json
transform/: dbt_project.yml
transform-dbt/: README.md  dbt_project.yml  olap-initdwh-config.sql  olap-initdwh-tables.sql  packages.yml
transform-dbt/snapshots/: dim_orderstatus.sql  dim_status.sql  dim_user.sql  properties.yml  snapshot_incremental_dim_status.sql  snapshot_incremental_dim_user.sql
transform-snowflake/: olap-initdwh-config.sql  olap-initdwh-tables.sql
transform_kimball/: olap-initdwh-config.sql
(+48 files in other folders)
